--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,8 @@
     "typescript": "^4.9.5"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.js": "eslint --cache --fix",
+    "*": "prettier --write",
+    "*.ts": "eslint --fix"
   }
 }
