--- a/client/package.json
+++ b/client/package.json
@@ -51,8 +51,7 @@
     "typescript": "^4.9.5"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix",
     "*": "prettier --write",
-    "*.ts": "eslint --fix"
+    "*.tsx": "eslint --fix"
   }
 }
