--- a/client/package.json
+++ b/client/package.json
@@ -43,11 +43,13 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   },
   "lint-staged": {
