--- a/client/package.json
+++ b/client/package.json
@@ -48,7 +48,7 @@
     ]
   },
   "devDependencies": {
-    "supabase": "^1.55.1"
+    "supabase": "^1.55.1",
     "@tailwindcss/typography": "^0.5.9",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
