--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@supabase/auth-ui-react": "^0.3.6",
-    "@supabase/supabase-js": "^2.21.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@react-google-maps/api": "^2.18.1",
+    "@supabase/auth-ui-react": "^0.3.6",
+    "@supabase/supabase-js": "^2.21.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +18,7 @@
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "typescript-eslint": "^0.0.1-alpha.0",
     "web-vitals": "^2.1.4"
@@ -48,13 +49,13 @@
     ]
   },
   "devDependencies": {
-    "supabase": "^1.55.1",
     "@tailwindcss/typography": "^0.5.9",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
+    "supabase": "^1.55.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   },
