--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "typescript-eslint": "^0.0.1-alpha.0",
     "web-vitals": "^2.1.4"
   },
