--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@react-google-maps/api": "^2.18.1",
+    "@react-spring/parallax": "^9.7.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@supabase/auth-ui-react": "^0.3.6",
     "@supabase/auth-ui-shared": "^0.1.6",
