--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "tw-elements": "^1.0.0-beta2",
     "typescript-eslint": "^0.0.1-alpha.0",
     "web-vitals": "^2.1.4"
   },
