--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@react-google-maps/api": "^2.18.1",
     "@react-spring/parallax": "^9.7.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.1",
     "@supabase/auth-ui-react": "^0.3.6",
     "@supabase/auth-ui-shared": "^0.1.6",
     "@supabase/supabase-js": "^2.21.0",
@@ -18,6 +20,7 @@
     "@types/node": "^16.18.25",
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.3",
+    "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
@@ -27,6 +30,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "stripe": "^12.5.0",
     "typescript-eslint": "^0.0.1-alpha.0",
     "web-vitals": "^2.1.4"
   },
