--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@react-google-maps/api": "^2.18.1",
     "@react-spring/parallax": "^9.7.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/stripe-js": "^1.52.1",
     "@supabase/auth-ui-react": "^0.3.6",
     "@supabase/auth-ui-shared": "^0.1.6",
     "@supabase/supabase-js": "^2.21.0",
@@ -27,6 +28,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "stripe": "^12.5.0",
     "tw-elements": "^1.0.0-beta2",
     "typescript-eslint": "^0.0.1-alpha.0",
     "web-vitals": "^2.1.4"
