--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "stripe": "^12.5.0",
     "tw-elements": "^1.0.0-beta2",
     "typescript-eslint": "^0.0.1-alpha.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -61,6 +62,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "@types/react-datepicker": "^4.11.2",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
