--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,6 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@react-google-maps/api": "^2.18.1",
-    "@react-spring/parallax": "^9.7.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/stripe-js": "^1.52.1",
     "@supabase/auth-ui-react": "^0.3.6",
@@ -19,6 +18,7 @@
     "@types/node": "^16.18.25",
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.3",
+    "cypress": "^12.12.0",
     "date-fns": "^2.30.0",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
@@ -26,7 +26,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
     "stripe": "^12.5.0",
     "tw-elements": "^1.0.0-beta2",
@@ -38,8 +38,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -66,7 +65,6 @@
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
-    "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "supabase": "^1.55.1",
     "tailwindcss": "^3.3.2",
